# Hydra

./: .clang-format  .codecov.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  bella.sh  build.sh  cara.sh
Bella/: Bella.cpp  Bella.hpp  CMakeLists.txt
Bella/commandLineArguments/: CommandLineArguments.cpp  CommandLineArguments.hpp  CommandLineArgumentsStructure.hpp
Bella/commandLineArguments/exceptions/: CommandLineArgumentsException.hpp
Bella/compiler/: Compiler.ipp
BellaTest/: BellaTest.cpp  CMakeLists.txt
BellaTest/compiler/: Compiler.hpp  CreateFormula.hpp  CreateFormula.ipp
BellaTest/compiler/dDNNF/: dDNNF_Compiler.hpp  dDNNF_CompilerTest.cpp  dDNNF_CompilerTestHidden.cpp  dDNNF_CompilerTestResult.hpp
BellaTest/compiler/enums/: CacheSizeTypeEnum.hpp
BellaTest/compiler/wDNNF/: wDNNF_Compiler.hpp  wDNNF_CompilerTest.cpp  wDNNF_CompilerTestHidden.cpp  wDNNF_CompilerTestResult.hpp
Cara/: CMakeLists.txt  Cara.cpp  Cara.hpp
Cara/commandLineArguments/: CommandLineArguments.cpp  CommandLineArguments.hpp  CommandLineArgumentsStructure.hpp
Cara/commandLineArguments/exceptions/: CommandLineArgumentsException.hpp
Cara/sharpSolver/: BruteForceApproach.ipp  SharpSolver.ipp
Cara/sharpSolver/enums/: ModelCountingTypeEnum.hpp
Cara/sharpSolver/exceptions/: SharpSolverException.hpp
CaraTest/: CMakeLists.txt  CaraTest.cpp
CaraTest/sharpSolver/: SharpSolver.hpp  SharpSolverTest.cpp  SharpSolverTestHidden.cpp  SharpSolverTestResult.hpp
Hydra/: CMakeLists.txt  Hydra.hpp  Hydra.ipp
Hydra/cache/: Cache.cxx  Cache.hpp  Cache.hxx  Cache.ipp  CacheBucketStructure.hpp  CacheBucketStructure.ipp  CacheRecordStructure.hpp  CacheRecordStructure.ipp  CacheStatisticsStructure.hpp  CacheStatisticsStructure.ipp  README.md
Hydra/cache/cacheCleaningStrategy/: CacheCleaningStrategyAbstract.hpp  CacheCleaningStrategyAbstract.ipp
Hydra/cache/cachingScheme/: CachingSchemeAbstract.hpp  CachingSchemeAbstract.ipp
Hydra/cache/enums/: CacheSizeTypeEnum.hpp  CacheTypeEnum.hpp
Hydra/cache/exceptions/: CacheException.hpp
Hydra/circuit/: Circuit.cxx  Circuit.hpp  Circuit.hxx  Circuit.ipp  README.md
Hydra/circuit/enums/: CircuitTypeEnum.hpp
Hydra/circuit/exceptions/: CircuitException.hpp  CircuitParserException.hpp
Hydra/circuit/node/: NodeAbstract.hpp  NodeAbstract.ipp
Hydra/circuit/parser/: CircuitParser.hpp  CircuitParser.ipp
Hydra/compiler/: Compiler.cxx  Compiler.hpp  Compiler.hxx  Compiler.ipp  Compiler.tpp  README.md
Hydra/compiler/enums/: IgnorePureLiteralTypeEnum.hpp  PartitioningHypergraphTypeEnum.hpp  RecomputingHypergraphCutTypeEnum.hpp
Hydra/compiler/exceptions/: CompilerException.hpp  ParserException.hpp
Hydra/decisionHeuristic/: DecisionHeuristicAbstract.cxx  DecisionHeuristicAbstract.hpp  DecisionHeuristicAbstract.hxx  DecisionHeuristicAbstract.ipp  README.md
Hydra/decisionHeuristic/enums/: DecisionHeuristicTypeEnum.hpp
Hydra/decisionHeuristic/exceptions/: DecisionHeuristicException.hpp
Hydra/decisionHeuristic/jeroslowWang/: JeroslowWangDecisionHeuristic.hpp  JeroslowWangDecisionHeuristic.ipp  JeroslowWangDecisionHeuristic.tpp
Hydra/decisionHeuristic/literalCount/: LiteralCountDecisionHeuristic.hpp  LiteralCountDecisionHeuristic.ipp  LiteralCountDecisionHeuristic.tpp
Hydra/decisionHeuristic/random/: RandomDecisionHeuristic.hpp  RandomDecisionHeuristic.ipp  RandomDecisionHeuristic.tpp
Hydra/decisionHeuristic/upc/: UpcDecisionHeuristic.hpp  UpcDecisionHeuristic.ipp  UpcDecisionHeuristic.tpp
Hydra/decisionHeuristic/vsads/: VsadsDecisionHeuristic.hpp  VsadsDecisionHeuristic.ipp  VsadsDecisionHeuristic.tpp
Hydra/decisionHeuristic/vsids/: VsidsDecisionHeuristic.hpp  VsidsDecisionHeuristic.ipp  VsidsDecisionHeuristic.tpp
Hydra/formula/: Literal.hpp  Literal.ipp  README.md
Hydra/formula/enums/: ClauseStatusEnum.hpp  ClauseStatusWatchedLiteralEnum.hpp  FormulaRepresentationTypeEnum.hpp  FormulaStatusEnum.hpp  RecognitionTypeEnum.hpp  StructuralRestrictedFormulaRepresentationTypeEnum.hpp
Hydra/formula/exceptions/: FormulaException.hpp  FormulaRepresentationException.hpp
Hydra/formula/partialAssignment/: PartialAssignment.hpp  PartialAssignment.ipp
Hydra/formula/representation/: FormulaRepresentationAbstract.cxx  FormulaRepresentationAbstract.hpp  FormulaRepresentationAbstract.hxx  FormulaRepresentationAbstract.ipp  RecognitionTypeStructure.hpp
Hydra/formula/structuralRestrictedRepresentation/: StructuralRestrictedFormulaRepresentation.hpp  StructuralRestrictedFormulaRepresentation.ipp
Hydra/other/: Other.hpp  Other.ipp
Hydra/partitioningHypergraph/: PartitioningHypergraphAbstract.cxx  PartitioningHypergraphAbstract.hpp  PartitioningHypergraphAbstract.hxx  PartitioningHypergraphAbstract.ipp  README.md
Hydra/renHCRecognition/: README.md  RenHCRecognitionAbstract.cxx  RenHCRecognitionAbstract.hpp  RenHCRecognitionAbstract.hxx  RenHCRecognitionAbstract.ipp
Hydra/satSolver/: EquivalencePreprocessingStructure.hpp  README.md  SatSolverAbstract.cxx  SatSolverAbstract.hpp  SatSolverAbstract.hxx  SatSolverAbstract.ipp
Hydra/statistics/: README.md  Statistics.cpp  Statistics.hpp  StatisticsAbstract.cpp  StatisticsAbstract.hpp
HydraTest/: CMakeLists.txt  TemplateTest.cpp  TemplateTest.hpp  catch.hpp
HydraTest/cache/: CacheTest.cpp  CacheTestResult.hpp
HydraTest/circuit/: CircuitTest.cpp  CircuitTestResult.hpp  CreateCircuit.hpp  CreateCircuit.ipp
HydraTest/decisionHeuristic/: CreateFormula.hpp  CreateFormula.ipp  DecisionHeuristic.hpp  DecisionHeuristicFormula.hpp
HydraTest/formula/: FormulaTest.cpp  FormulaTestResult.hpp
HydraTest/formulaInstance/: CreateFormula.hpp  CreateFormula.ipp  FormulaInstanceNumberOfModelsResult.hpp
HydraTest/other/: MergeSortTest.cpp  MergeSortTestResult.hpp
HydraTest/partitioningHypergraph/: PartitioningHypergraphTest.cpp  PartitioningHypergraphTestResult.hpp
HydraTest/renHCRecognition/: CreateFormula.hpp  CreateFormula.ipp  RenHCRecognition.hpp
HydraTest/satSolver/: CreateFormula.hpp  CreateFormula.ipp  SatSolver.hpp
HydraTest/statistics/: StatisticsTest.cpp  StatisticsTestResult.hpp
(+277 files in other folders)
